--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,18 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <meta http-equiv="content-security-policy" content="
+   require-sri-for script
+   default-src 'none'  https://localhost:8085/ ;
+   script-src 'self' https://code.jquery.com https://maxcdn.bootstrapcdn.com ;
+   style-src 'self' 'unsafe-inline' fonts.googleapis.com ;
+   img-src 'self';
+   font-src 'self' 'unsafe-inline' maxcdn.bootstrapcdn.com
+   fonts.gstatic.com/;
+   form-action 'self';
+   object-src 'self'
+
+">
 </head>
 <body class="mat-typography">
 <app-root>Loading...</app-root>
